--- a/src/assets/css/guess_word.css
+++ b/src/assets/css/guess_word.css
@@ -20,6 +20,27 @@
   }
 }
 
+@media screen and (991.98px <= width <=1199.98px) {
+  .guess_word {
+    text-align: center;
+
+    margin-bottom: 50px;
+  }
+
+  .guess_word h1 {
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+    word-wrap: break-word;
+
+    /* line-height: 140px; */
+    color: var(--black-);
+    text-transform: capitalize;
+
+    font-family: var(--font-bold-);
+  }
+}
+
 @media screen and (767.98px <= width <=991.98px) {
   .guess_word {
     text-align: center;
