--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -68,6 +68,58 @@
   }
 }
 
+@media screen and (991.98px <= width <= 1199.98px) {
+  .landing {
+    padding: 100px 0px;
+  }
+
+  .landing .container {
+    width: 85%;
+  }
+
+  .landing .landing_left h3 {
+    font-family: andika;
+    font-size: 31px;
+    color: var(--black-);
+  }
+
+  .landing .landing_left h1 {
+    line-height: 100px;
+    font-size: 110px;
+    font-family: oswald_bold;
+    color: var(--light-green-);
+    margin-bottom: 40px;
+  }
+
+  .landing .landing_left p {
+    font-family: var(--font-light-);
+    color: var(--black-);
+    font-size: 21px;
+    margin-bottom: 50px;
+  }
+
+  .landing .landing_left a {
+    width: 310px;
+    text-align: center;
+    border-radius: 8px;
+    display: block;
+    background-color: var(--black-);
+    padding: 8px;
+    color: var(--white-);
+    font-size: 21px;
+    font-family: var(--font-light-);
+    transition: all 0.3s ease;
+  }
+
+  .landing .landing_left a:hover {
+    transform: scale(105%);
+  }
+
+  .landing .landing_right {
+    display: none;
+  }
+}
+
 @media screen and (767.98px <= width <= 991.98px) {
   .landing {
     padding: 100px 0px;
