--- a/src/assets/css/select_mode.css
+++ b/src/assets/css/select_mode.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 1200px) {
   .select_mode {
-    padding: 80px 0;
+    padding: 70px 0;
   }
 
   .select_mode .select_mode_container {
@@ -14,7 +14,7 @@
   }
 
   .select_mode .mainText {
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     text-align: center;
   }
 
@@ -65,10 +65,78 @@
   }
 }
 
+@media screen and (991.98px <= width <= 1199.98px) {
+  .select_mode {
+    /* background-color: rebeccapurple; */
+    padding-top: 60px;
+  }
+
+  .select_mode .container {
+    width: 85%;
+  }
+
+  .select_mode .select_mode_container {
+    display: flex;
+    gap: 40px;
+    /* flex-direction: column; */
+  }
+
+  .select_mode .mainText {
+    margin-bottom: 60px;
+    text-align: center;
+  }
+
+  .select_mode .mainText h1 {
+    font-family: var(--font-bold-);
+    font-size: 45px;
+    color: var(--light-green-);
+  }
+
+  .select_mode a {
+    border-radius: 8px;
+    /* margin-bottom: 40px; */
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    transition: all 0.3s ease-in-out;
+  }
+
+  .select_mode a .img {
+    max-width: 100%;
+    height: 330px;
+    /* margin-bottom: 20px; */
+  }
+
+  .select_mode a .img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+  .select_mode a .headerText {
+    padding: 25px;
+  }
+
+  .select_mode a .headerText h3 {
+    font-size: 31px;
+    font-family: var(--font-bold-);
+    margin-bottom: 10px;
+    color: var(--light-green-);
+  }
+
+  .select_mode a .headerText p {
+    font-size: 18px;
+    color: var(--black-);
+    font-family: var(--font-reg-);
+  }
+
+  .select_mode a:hover {
+    transform: scale(101%);
+  }
+}
+
 @media screen and (767.98px <= width <= 991.98px) {
   .select_mode {
     /* background-color: rebeccapurple; */
-    padding-top: 80px;
+    padding-top: 50px;
   }
 
   .select_mode .container {
@@ -81,7 +149,7 @@
   }
 
   .select_mode .mainText {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     text-align: center;
   }
 
